Create a new base classloader including parent-first test scoped dependencies when bootstrapping for CT